# repovec-appliance

./: .gitignore  .gitmodules  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml  rustfmt.toml  typos.local.toml  typos.toml
crates/repovec-ci/: Cargo.toml
crates/repovec-ci/src/: lib.rs  main.rs
crates/repovec-ci/src/snapshots/: repovec_ci__tests__changed_file_docs_output.snap  repovec_ci__tests__help_output.snap  repovec_ci__tests__invalid_flag_error.snap  repovec_ci__tests__stdin_empty_output.snap  repovec_ci__tests__systemd_gate_error_message.snap  repovec_ci__tests__systemd_gate_real_validation_success.snap  repovec_ci__tests__systemd_gate_success_confirmation.snap
crates/repovec-ci/tests/: docs_gate_policy_bdd.rs  docs_gate_unit.rs
crates/repovec-ci/tests/features/: docs_gate.feature
crates/repovec-core/: Cargo.toml
crates/repovec-core/src/: lib.rs
crates/repovec-core/src/appliance/: daemon_startup.rs  mod.rs  qdrant_quadlet.rs
crates/repovec-core/src/appliance/qdrant_liveness/: adapter.rs  error.rs  mod.rs  observability.rs  startup.rs  tests.rs
crates/repovec-core/src/appliance/qdrant_liveness/startup/: mod.rs  startup_tests.rs
crates/repovec-core/src/appliance/qdrant_quadlet/: api_key.rs  api_key_tests.rs  api_key_unit_tests.rs  error.rs  mod.rs  observer.rs  parser.rs  platform_bindings.rs  provisioning_tests.rs  tests.rs  tests_proptest.rs  tests_proptest_strategies.rs
crates/repovec-core/src/appliance/qdrant_quadlet/log_tests/: log_test_cases.rs  mod.rs
crates/repovec-core/src/appliance/qdrant_quadlet/parser/: mod.rs  proptests.rs  tests.rs
crates/repovec-core/src/appliance/qdrant_quadlet/platform_bindings/: mod.rs  tests.rs
crates/repovec-core/src/appliance/qdrant_quadlet/snapshots/: repovec_core__appliance__qdrant_quadlet__api_key_tests__contradictory_api_key_secret_type_display.snap  repovec_core__appliance__qdrant_quadlet__api_key_tests__incorrect_api_key_after_dependency_display.snap  repovec_core__appliance__qdrant_quadlet__api_key_tests__incorrect_api_key_secret_type_display.snap  repovec_core__appliance__qdrant_quadlet__api_key_tests__inline_api_key_environment_display.snap  repovec_core__appliance__qdrant_quadlet__api_key_tests__missing_api_key_requires_dependency_display.snap  repovec_core__appliance__qdrant_quadlet__api_key_tests__missing_api_key_secret_display.snap  repovec_core__appliance__qdrant_quadlet__provisioning_tests__fail_closed_else_branch.snap  repovec_core__appliance__qdrant_quadlet__provisioning_tests__lock_critical_section.snap  repovec_core__appliance__qdrant_quadlet__provisioning_tests__release_lock_implementation.snap  repovec_core__appliance__qdrant_quadlet__tests__duplicate_auto_update_policies_display.snap  repovec_core__appliance__qdrant_quadlet__tests__duplicate_image_values_display.snap  repovec_core__appliance__qdrant_quadlet__tests__grpc_port_not_loopback_display.snap  repovec_core__appliance__qdrant_quadlet__tests__image_not_fully_qualified_display.snap  repovec_core__appliance__qdrant_quadlet__tests__incorrect_auto_update_display.snap  repovec_core__appliance__qdrant_quadlet__tests__incorrect_storage_source_display.snap  repovec_core__appliance__qdrant_quadlet__tests__incorrect_storage_target_display.snap  repovec_core__appliance__qdrant_quadlet__tests__invalid_line_display.snap  repovec_core__appliance__qdrant_quadlet__tests__missing_auto_update_display.snap  repovec_core__appliance__qdrant_quadlet__tests__missing_grpc_port_display.snap  repovec_core__appliance__qdrant_quadlet__tests__missing_image_display.snap  repovec_core__appliance__qdrant_quadlet__tests__missing_rest_port_display.snap  (+5 more)
crates/repovec-core/src/appliance/systemd_units/: error.rs  mod.rs  parsed.rs  parsed_tests_proptest.rs  parser.rs  service_runtime_tests.rs  startup.rs  tests.rs  tests_proptest.rs  tests_proptest_strategies.rs
crates/repovec-core/src/github_oauth/: mod.rs  tests.rs
crates/repovec-core/tests/: compile_time.rs  github_oauth_bdd.rs  qdrant_liveness_integration.rs  qdrant_quadlet_bdd.rs  qdrant_quadlet_observer_ui.rs  systemd_units_bdd.rs
crates/repovec-core/tests/features/: github_oauth.feature  qdrant_quadlet.feature  systemd_units.feature
crates/repovec-core/tests/ui/: github_oauth_secret_wrappers_are_opaque.rs  github_oauth_secret_wrappers_are_opaque.stderr  qdrant_api_key_is_opaque.rs  qdrant_api_key_is_opaque.stderr  qdrant_quadlet_observer_requires_send_sync.rs  qdrant_quadlet_observer_requires_send_sync.stderr
crates/repovec-mcpd/: Cargo.toml
crates/repovec-mcpd/src/: main.rs
crates/repovec-test-helpers/: Cargo.toml
crates/repovec-test-helpers/src/: lib.rs
crates/repovec-test-helpers/src/snapshots/: repovec_test_helpers__startup_failure_log_repovec-mcpd_service.snap  repovec_test_helpers__startup_failure_log_repovecd_service.snap  repovec_test_helpers__startup_success_log.snap
crates/repovecd/: Cargo.toml
crates/repovecd/examples/: device-flow-test.rs
crates/repovecd/src/: github_device_flow.rs  github_oauth_client.rs  lib.rs  main.rs  tracing_test.rs
crates/repovecd/src/github_device_flow/: clock.rs  mod.rs  observability.rs  runtime_debug.rs  tests.rs
crates/repovecd/src/github_device_flow/examples/: complete_device_flow.rsdoc  device_flow_api.rsdoc  runtime_new.rsdoc  runtime_with_clock.rsdoc  sleeper.rsdoc  token_store.rsdoc
crates/repovecd/src/github_oauth_client/: mod.rs  observability.rs  tests.rs  wire.rs
crates/repovecd/src/github_token_store/: atomic_write.rs  mod.rs  observability.rs  redaction.rs  tests.rs
crates/repovecd/tests/: github_oauth_client.rs
integration-tests/: Containerfile  README.md  conftest.py  pyproject.toml
integration-tests/lib/: __init__.py  assertions.py  commands.py  constants.py  container.py  result.py  test_helper.bash
integration-tests/lib/tests/: __init__.py  test_assertions_parse.py  test_result.py
integration-tests/provisioning/: __init__.py  conftest.py  qdrant_api_key.bats  test_qdrant_api_key.py  test_qdrant_api_key_cmd_mox.py
(+125 files in other folders)
