[workspace]
members = [
    "crates/repovec-ci",
    "crates/repovec-core",
    "crates/repovec-mcpd",
    "crates/repovec-tui",
    "crates/repovecd",
    "crates/repovectl",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "ISC"
publish = false

[workspace.dependencies]
camino = "1.1.12"
insta = { version = "1.47.2", features = ["yaml"] }
rstest = "0.26.1"
rstest-bdd = "0.5.0"
rstest-bdd-macros = { version = "0.5.0", features = ["strict-compile-time-validation"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

allow_attributes = "deny"
allow_attributes_without_reason = "deny"
blanket_clippy_restriction_lints = "deny"
cognitive_complexity = "deny"
needless_pass_by_value = "deny"
implicit_hasher = "deny"

dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
string_slice = "deny"
integer_division = "deny"
integer_division_remainder_used = "deny"
panic_in_result_fn = "deny"
unreachable = "deny"

host_endian_bytes = "deny"
little_endian_bytes = "deny"
big_endian_bytes = "deny"

let_underscore_must_use = "deny"
or_fun_call = "deny"
option_if_let_else = "deny"
self_named_module_files = "deny"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
str_to_string = "deny"
string_lit_as_bytes = "deny"
try_err = "deny"
unneeded_field_pattern = "deny"
use_self = "deny"

float_arithmetic = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
lossy_float_literal = "deny"

missing_const_for_fn = "deny"
must_use_candidate = "deny"
unused_async = "deny"

missing_panics_doc = "deny"
error_impl_error = "deny"
result_large_err = "deny"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.rustdoc]
missing_crate_level_docs = "deny"
