[project]
name = "repovec-appliance-integration-tests"
version = "0.0.0"
description = "Integration tests for the repovec-appliance packaging helpers."
# Pinned to the lowest Python that satisfies all harness dependencies:
# cuprum requires >=3.12, cmd-mox requires >=3.11, testcontainers and
# pytest require >=3.10. The harness itself does not rely on any 3.13-
# only features, so the floor follows cuprum.
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3,<10",
    "testcontainers>=4.9,<5",
    "cuprum>=0.1,<1",
    "cmd-mox>=0.2,<1",
]

# The harness is intentionally not an installable wheel; it exists only as
# a vehicle for pytest discovery and ``uv sync``. Telling setuptools there
# are no packages keeps ``uv pip install -e .`` (and the wider ``uv sync``
# workflow) usable without a custom build backend.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
minversion = "8.0"
# ``lib/tests`` carries the pure-Python unit tests for the harness's
# value objects and parsing helpers; they run by default because they
# need neither a marker nor a container runtime. ``provisioning`` owns
# the marker-gated behavioural suites.
testpaths = ["lib/tests", "provisioning"]
# The lifecycle suite shares a session-scoped privileged container per
# worker. pytest-xdist would multiply the container build and create
# unnecessary contention on the host runtime; disable it explicitly so
# ``-n auto`` cannot silently inflate resource use. ``-p no:xdist`` is a
# no-op when xdist is not installed.
addopts = "-p no:xdist"
markers = [
    "integration: requires a Docker-compatible container runtime and privileged nested Podman",
    "cmd_mox: command-contract tests using cmd-mox shims",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:testcontainers.*",
]
