[package]
name = "repovec-ci"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
camino.workspace = true
cap-std = { version = "3.4.5", features = ["fs_utf8"] }

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
rstest-bdd.workspace = true
rstest-bdd-macros.workspace = true

[lints]
workspace = true
