[package]
name = "repovec-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
camino.workspace = true
cap-std.workspace = true
qdrant-client.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
repovec-test-helpers = { path = "../repovec-test-helpers" }
rstest.workspace = true
rstest-bdd.workspace = true
rstest-bdd-macros = { workspace = true, features = ["strict-compile-time-validation"] }
tracing-subscriber.workspace = true
trybuild.workspace = true

[lints]
workspace = true
