[package]
name = "repovec-mcpd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
repovec-core = { path = "../repovec-core" }
tracing.workspace = true
tracing-subscriber = { version = "0.1", features = ["fmt"] }

[lints]
workspace = true
