[package]
name = "repovec-mcpd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
repovec-core = { path = "../repovec-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
repovec-test-helpers = { path = "../repovec-test-helpers", features = ["snapshots"] }

[lints]
workspace = true
