[package]
name = "repovec-test-helpers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
insta = { workspace = true, optional = true }
repovec-core = { path = "../repovec-core" }
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
snapshots = ["dep:insta"]

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
