[package]
name = "repovecd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
repovec-core = { path = "../repovec-core" }
tracing-subscriber.workspace = true

[dev-dependencies]
repovec-test-helpers = { path = "../repovec-test-helpers" }

[lints]
workspace = true
