[package]
name = "repovecd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
camino.workspace = true
cap-std.workspace = true
oauth2 = { workspace = true, features = ["reqwest-blocking", "rustls-tls"] }
repovec-core = { path = "../repovec-core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta.workspace = true
oauth2-test-server.workspace = true
repovec-test-helpers = { path = "../repovec-test-helpers", features = ["snapshots"] }
rstest.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
